--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -9560,6 +9560,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python3.6/site-packages/pandas/core/generic.py:2999: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self[name] = value\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.treatment = df.treatment.astype(bool)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's Check it out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 273,
    "metadata": {},
    "outputs": [
@@ -9599,7 +9628,6 @@
     }
    ],
    "source": [
-    "df.treatment = df.treatment.astype(bool)\n",
     "df.info()"
    ]
   },
@@ -10702,6 +10730,13 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NICE!"
    ]
   },
   {
