--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1454,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/cameronmatson/smuf17/ml/smuml_lab1'"
+      ]
+     },
+     "execution_count": 1454,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1379,
    "metadata": {},
    "outputs": [
@@ -2338,7 +2360,9 @@
   {
    "cell_type": "code",
    "execution_count": 1394,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.num_employees.replace(to_replace=['1-5', '6-25', '26-100', '100-500', '500-1000', 'More than 1000'],\n",
@@ -2530,7 +2554,9 @@
   {
    "cell_type": "code",
    "execution_count": 1396,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.gender = df.gender.astype(bool)\n",
@@ -2540,7 +2566,9 @@
   {
    "cell_type": "code",
    "execution_count": 1397,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df.past_history.replace(to_replace=['No', 'Yes', 'Maybe'], value=[0, 1, 2], inplace=True)\n",
@@ -4246,7 +4274,9 @@
   {
    "cell_type": "code",
    "execution_count": 1412,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ill = df[(df.past_history == 1) | (df.current_state == 1)]"
@@ -4398,7 +4428,9 @@
   {
    "cell_type": "code",
    "execution_count": 1416,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filtered_locations = group_location.filter(lambda x: len(x) >= 10)"
@@ -4816,7 +4848,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
