added nb update

--- a/02smuml_lab/lab2.ipynb
+++ b/02smuml_lab/lab2.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "## Purpose\n",
     "\n",
-    "This dataset is a collection reviews from Pitchfork, a music review site.  It 18,393 reviews contains reviews from 1999 to the present day.  They look at a variety There is a lot of research being done related to the way that people interact with music, specifically how they describe it in words.  What I'd like to get out of this data is if there is any relation between way the music is described in the reviews and the music itself."
+    "This dataset is a collection reviews from Pitchfork, a music review site.  It 18,393 reviews contains reviews from 1999 to the present day.  They look at a variety There is a lot of research being done related to the way that people interact with music, specifically how they describe it in words.  What I'd like to get out of this data is if there is any relation between way the music is described in the reviews and the music itself.\n",
+    "\n",
+    "The data was acquired at https://www.kaggle.com/nolanbconaway/pitchfork-data"
    ]
   },
   {
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +827,7 @@
     }
    ],
    "source": [
-    "with open('../../data/scrabble.txt') as f:\n",
+    "with open('../data/scrabble.txt') as f:\n",
     "    vocab = f.read().split('\\n')\n",
     "    \n",
     "counter = CountVectorizer(stop_words='english', vocabulary=vocab) # an object capable of counting words in a document!\n",
@@ -3154,7 +3156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implications on Classification"
+    "## Relation to Target Class"
    ]
   },
   {
