--- a/06smuml/lab6_zihao.ipynb
+++ b/06smuml/lab6_zihao.ipynb
@@ -401,11 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "grouped_features = [('Age','MaritalStatus'),('Age','Gender'),('Department','MonthlyIncome'),('Department','YearsAtCompany'),('Age','TotalWorkingYears'),\n",
+    "                    ('Education', 'JobSatisfaction'),\n",
+    "                    ('Age','Gender','DistanceFromHome'),('Department','PerformanceRating','MonthlyIncome'),\n",
+    "                    ('Education', 'JobSatisfaction','RelationshipSatisfaction'),('Department','OverTime','YearsAtCompany'),\n",
+    "                    ('Age','TotalWorkingYears','YearsAtCompany')]"
    ]
   },
   {
