--- a/06smuml/Lab6.ipynb
+++ b/06smuml/Lab6.ipynb
@@ -672,7 +672,7 @@
     "\n",
     "### Validation Method\n",
     "\n",
-    "Because of the imbalance in our prediction label we'll use a stratified split, this way we'll preserve the distribution in our model.  "
+    "Because of the imbalance in our prediction label we'll use a stratified split, this way we'll preserve the distribution in our model.  In an attempt to realistically generalize the overall performance of our model we'll use a nested cross-validation scheme.  The both the outer and inner loops will be 10-fold cross validations.  We use k-fold as opposed to a different cv scheme like shuffle-split, because our dataset is not that large and we would like to train on as much data as possible.  Using a k-fold cv ensures that we train on all of our data.  The inner loop will tune the hyper-parameters of our model which will be discussed later."
    ]
   },
   {
