--- a/06smuml/Lab6_yichen.ipynb
+++ b/06smuml/Lab6_yichen.ipynb
@@ -6154,13 +6154,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now we have a dataframe with 2000 rows and 15 clomuns expanded dataset"
+   ]
   }
  ],
  "metadata": {
