--- a/06smuml/Lab6_yichen.ipynb
+++ b/06smuml/Lab6_yichen.ipynb
@@ -363,7 +363,8 @@
     "collapsed": true
    },
    "source": [
-    "For data expension, we will try several ways to do so. And first we are going to copy and append some rows to origin dataset and expand it to 2000 rows."
+    "For data expension, we will try several ways to do so. And first we are going to copy and append some rows to origin dataset and expand it to 2000 rows.\n",
+    "For another attempt, we take numberical datas from the raw dataframe slice, and add some randomly generat noise to these numerical data. Then we insert categorical data rows back to the dataframe of numerical data with random noise."
    ]
   },
   {
