change metric summary

--- a/06smuml/Lab6.ipynb
+++ b/06smuml/Lab6.ipynb
@@ -660,9 +660,8 @@
     "\n",
     "* precision: Values a low false positive rate.  This probably isn't the best either, because while we wouldn't **want** to think that an employee is leaving when they aren't, it probably won't hurt the business, unless the employer grossly overreacts and scares them away\n",
     "\n",
-    "* recall: Values a low false negative rate.  This is the best metric for our case on its own.  If our job is to see when employees leave, and if the fact is that they usually **don't** leave, and if its potentially pretty damaging to the firm when the employee **does** leave, we want to make sure that we miss as few cases as possible.\n",
+    "* recall: Values a low false negative rate.  This is the best metric for our case.  If our job is to see when employees leave, and if the fact is that they usually **don't** leave, and if its potentially pretty damaging to the firm when the employee **does** leave, we want to make sure that we miss as few cases as possible.\n",
     "\n",
-    "* f1: A combination of the precision and recall.  We'll use this because its usually the best tradeoff between false positives and false negatives.\n",
     "\n",
     "### Validation Method\n",
     "\n",
