--- a/06smuml/lab6_zihao-formal.ipynb
+++ b/06smuml/lab6_zihao-formal.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview\n",
+    "\n",
+    "This data set was created by IBM data scientists.  It describes 35 features for 1470 (fictional) employees including whether or not the employee has left the firm (labeled \"attrition\" in the dataset).  Employees leave companies for a variety of reasons: disatisfaction with their role, their manager or their pay.  Perhaps they aren't necessarily dissatified with their current job but feel like something better is out there.  Or maybe they just feel like they'd been there long enough, and want something different. Most likely its a combination of all of these things, plus a few others.  \n",
+    "\n",
+    "Employers would like to have a sense of why and when an employee might leave.  If an employer believes that an employee that they really value might leave, they could respond and try to prevent them from leaving.  This is what we will attempt to predict using a wide and deep neural network."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -236,7 +247,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,13 +262,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 35 features in total in the dataset about. \n",
+    "# Expansion\n",
+    "\n",
+    "This is a relative small dataset with only 1470 data rows. We want more data to train and test. For data expension, we will try several ways to do so. And first we are going to copy and append some rows to origin dataset and expand it to 2000 rows.\n",
+    "For another attempt, we take numberical datas from the raw dataframe slice, and add some randomly generat noise to these numerical data. Then we insert categorical data rows back to the dataframe of numerical data with random noise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_slice = df[:530]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_new = df.append(df_slice)\n",
+    "df_new = df_new.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_slice2 = df_slice[['Age','DistanceFromHome','Education','EnvironmentSatisfaction',\n",
+    "                      'JobSatisfaction','MonthlyIncome','PerformanceRating','RelationshipSatisfaction',\n",
+    "                      'TotalWorkingYears','YearsAtCompany']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use df_slice2 to take numberical datas from the raw dataframe slice, and add some randomly generated noise to these numerical data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_slice2 = df_slice2 * (1 + np.random.uniform(-0.01,0.01,(df_slice2.shape)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_slice2.insert(1, 'Attrition', df_slice['Attrition'])\n",
+    "df_slice2.insert(2, 'Department', df_slice['Department'])\n",
+    "df_slice2.insert(6, 'Gender', df_slice['Gender'])\n",
+    "df_slice2.insert(8, 'MaritalStatus', df_slice['MaritalStatus'])\n",
+    "df_slice2.insert(10, 'OverTime', df_slice['OverTime'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_new2 = df.append(df_slice2)\n",
+    "df_new2 = df_new2.reset_index(drop=True)\n",
+    "df = df_new2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now we have a dataframe with 2000 rows and 15 clomuns expanded dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 35 features in total in the dataset, but we don't want to use all of them.  \n",
     "Let's focus on a few of them:\n",
     "- Age\n",
-    "- Attrition\n",
+    "- Attrition \n",
     "- Department\n",
-    "- DistanceFromHome\n",
-    "- Education\n",
+    "- DistanceFromHome \n",
+    "- Education \n",
+    "- EduacationField\n",
     "- EnvironmentSatisfaction\n",
     "- Gender\n",
     "- JobSatisfaction\n",
@@ -268,13 +377,17 @@
     "- RelationshipSatisfaction\n",
     "- TotalWorkingYears\n",
     "- YearsAtCompany\n",
+    "- YearsSinceLastPromotion\n",
     "\n",
-    "In this lab, we will use attrition as our label, to try to predict the attrition status accroding to other attributes. \n"
+    "These features are what we believe important to predict the attrition status. \n",
+    "We will use attrition as our label.\n",
+    "\n",
+    "So let's first drop the other features. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -282,25 +395,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1470 entries, 0 to 1469\n",
+      "RangeIndex: 2000 entries, 0 to 1999\n",
       "Data columns (total 15 columns):\n",
-      "Age                         1470 non-null int64\n",
-      "Attrition                   1470 non-null object\n",
-      "Department                  1470 non-null object\n",
-      "DistanceFromHome            1470 non-null int64\n",
-      "Education                   1470 non-null int64\n",
-      "EnvironmentSatisfaction     1470 non-null int64\n",
-      "Gender                      1470 non-null object\n",
-      "JobSatisfaction             1470 non-null int64\n",
-      "MaritalStatus               1470 non-null object\n",
-      "MonthlyIncome               1470 non-null int64\n",
-      "OverTime                    1470 non-null object\n",
-      "PerformanceRating           1470 non-null int64\n",
-      "RelationshipSatisfaction    1470 non-null int64\n",
-      "TotalWorkingYears           1470 non-null int64\n",
-      "YearsAtCompany              1470 non-null int64\n",
-      "dtypes: int64(10), object(5)\n",
-      "memory usage: 172.3+ KB\n"
+      "Age                         2000 non-null float64\n",
+      "Attrition                   2000 non-null object\n",
+      "Department                  2000 non-null object\n",
+      "DistanceFromHome            2000 non-null float64\n",
+      "Education                   2000 non-null float64\n",
+      "EnvironmentSatisfaction     2000 non-null float64\n",
+      "Gender                      2000 non-null object\n",
+      "JobSatisfaction             2000 non-null float64\n",
+      "MaritalStatus               2000 non-null object\n",
+      "MonthlyIncome               2000 non-null float64\n",
+      "OverTime                    2000 non-null object\n",
+      "PerformanceRating           2000 non-null float64\n",
+      "RelationshipSatisfaction    2000 non-null float64\n",
+      "TotalWorkingYears           2000 non-null float64\n",
+      "YearsAtCompany              2000 non-null float64\n",
+      "dtypes: float64(10), object(5)\n",
+      "memory usage: 234.5+ KB\n"
      ]
     }
    ],
@@ -323,12 +436,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's good that we don't have any null value. Let's one hot encode the Attrition, Department, Gender, MaritalStatus and Overtime. "
+    "It's good that we don't have any null value. Let's encode the categorical data to ints. There are some categorical values those have been encoded once from the origin and transfered to type int. We want to use some of them for the cross features, so we want to transfer their type to string. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -337,16 +450,21 @@
     "to_convert = ['Education','EnvironmentSatisfaction','JobSatisfaction',\n",
     "            'PerformanceRating','RelationshipSatisfaction']\n",
     "for col in to_convert:\n",
-    "    df[col] = df[col].astype(np.str)\n",
+    "    df[col] = df[col].astype(np.str) \n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encode the categorical features:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -375,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -396,31 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['DistanceFromHome',\n",
-       " 'MonthlyIncome',\n",
-       " 'YearsAtCompany',\n",
-       " 'TotalWorkingYears',\n",
-       " 'Age']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "numerics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -430,35 +524,35 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1470 entries, 0 to 1469\n",
+      "RangeIndex: 2000 entries, 0 to 1999\n",
       "Data columns (total 25 columns):\n",
-      "Age                             1470 non-null float64\n",
-      "Attrition                       1470 non-null object\n",
-      "Department                      1470 non-null object\n",
-      "DistanceFromHome                1470 non-null float64\n",
-      "Education                       1470 non-null object\n",
-      "EnvironmentSatisfaction         1470 non-null object\n",
-      "Gender                          1470 non-null object\n",
-      "JobSatisfaction                 1470 non-null object\n",
-      "MaritalStatus                   1470 non-null object\n",
-      "MonthlyIncome                   1470 non-null float64\n",
-      "OverTime                        1470 non-null object\n",
-      "PerformanceRating               1470 non-null object\n",
-      "RelationshipSatisfaction        1470 non-null object\n",
-      "TotalWorkingYears               1470 non-null float64\n",
-      "YearsAtCompany                  1470 non-null float64\n",
-      "PerformanceRating_int           1470 non-null int64\n",
-      "MaritalStatus_int               1470 non-null int64\n",
-      "Attrition_int                   1470 non-null int64\n",
-      "RelationshipSatisfaction_int    1470 non-null int64\n",
-      "Department_int                  1470 non-null int64\n",
-      "OverTime_int                    1470 non-null int64\n",
-      "JobSatisfaction_int             1470 non-null int64\n",
-      "Education_int                   1470 non-null int64\n",
-      "Gender_int                      1470 non-null int64\n",
-      "EnvironmentSatisfaction_int     1470 non-null int64\n",
+      "Age                             2000 non-null float64\n",
+      "Attrition                       2000 non-null object\n",
+      "Department                      2000 non-null object\n",
+      "DistanceFromHome                2000 non-null float64\n",
+      "Education                       2000 non-null object\n",
+      "EnvironmentSatisfaction         2000 non-null object\n",
+      "Gender                          2000 non-null object\n",
+      "JobSatisfaction                 2000 non-null object\n",
+      "MaritalStatus                   2000 non-null object\n",
+      "MonthlyIncome                   2000 non-null float64\n",
+      "OverTime                        2000 non-null object\n",
+      "PerformanceRating               2000 non-null object\n",
+      "RelationshipSatisfaction        2000 non-null object\n",
+      "TotalWorkingYears               2000 non-null float64\n",
+      "YearsAtCompany                  2000 non-null float64\n",
+      "PerformanceRating_int           2000 non-null int64\n",
+      "Gender_int                      2000 non-null int64\n",
+      "Department_int                  2000 non-null int64\n",
+      "RelationshipSatisfaction_int    2000 non-null int64\n",
+      "MaritalStatus_int               2000 non-null int64\n",
+      "Attrition_int                   2000 non-null int64\n",
+      "OverTime_int                    2000 non-null int64\n",
+      "EnvironmentSatisfaction_int     2000 non-null int64\n",
+      "Education_int                   2000 non-null int64\n",
+      "JobSatisfaction_int             2000 non-null int64\n",
       "dtypes: float64(5), int64(10), object(10)\n",
-      "memory usage: 287.2+ KB\n"
+      "memory usage: 390.7+ KB\n"
      ]
     }
    ],
@@ -467,15 +561,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now our data is ready to split. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train (1323, 15) test (147, 15)\n"
+      "train (1800, 15) test (200, 15)\n"
      ]
     }
    ],
@@ -501,22 +602,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "cross_columns = [['Gender','MaritalStatus'],\n",
-    "                    ['Education', 'JobSatisfaction'],['Department','PerformanceRating'],\n",
-    "                    ['Education', 'JobSatisfaction','RelationshipSatisfaction'],['Department','OverTime'],\n",
-    "                ]"
-   ]
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -533,7 +625,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cross_columns = [['Gender','MaritalStatus'],\n",
+    "                    ['Education', 'JobSatisfaction'],['Department','PerformanceRating'],\n",
+    "                    ['Education', 'JobSatisfaction','RelationshipSatisfaction'],['Department','OverTime'],\n",
+    "                ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -541,34 +647,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "1323/1323 [==============================] - 1s 1ms/step - loss: 0.1550 - acc: 0.8231\n",
+      "1800/1800 [==============================] - 3s 2ms/step - loss: 0.1530 - acc: 0.8289\n",
       "Epoch 2/10\n",
-      "1323/1323 [==============================] - 0s 114us/step - loss: 0.1145 - acc: 0.8405\n",
+      "1800/1800 [==============================] - 0s 160us/step - loss: 0.1020 - acc: 0.8572\n",
       "Epoch 3/10\n",
-      "1323/1323 [==============================] - 0s 116us/step - loss: 0.0658 - acc: 0.9229\n",
+      "1800/1800 [==============================] - 0s 166us/step - loss: 0.0476 - acc: 0.9589\n",
       "Epoch 4/10\n",
-      "1323/1323 [==============================] - 0s 87us/step - loss: 0.0178 - acc: 0.9970\n",
+      "1800/1800 [==============================] - 0s 158us/step - loss: 0.0118 - acc: 0.9978\n",
       "Epoch 5/10\n",
-      "1323/1323 [==============================] - 0s 138us/step - loss: 0.0056 - acc: 1.0000\n",
+      "1800/1800 [==============================] - 0s 156us/step - loss: 0.0045 - acc: 1.0000\n",
       "Epoch 6/10\n",
-      "1323/1323 [==============================] - 0s 117us/step - loss: 0.0028 - acc: 1.0000\n",
+      "1800/1800 [==============================] - 0s 167us/step - loss: 0.0023 - acc: 1.0000\n",
       "Epoch 7/10\n",
-      "1323/1323 [==============================] - 0s 94us/step - loss: 0.0017 - acc: 1.0000\n",
+      "1800/1800 [==============================] - 0s 137us/step - loss: 0.0014 - acc: 1.0000\n",
       "Epoch 8/10\n",
-      "1323/1323 [==============================] - 0s 143us/step - loss: 0.0012 - acc: 1.0000\n",
+      "1800/1800 [==============================] - 0s 182us/step - loss: 0.0010 - acc: 1.0000\n",
       "Epoch 9/10\n",
-      "1323/1323 [==============================] - 0s 149us/step - loss: 8.6133e-04 - acc: 1.0000\n",
+      "1800/1800 [==============================] - 0s 191us/step - loss: 7.6979e-04 - acc: 1.0000\n",
       "Epoch 10/10\n",
-      "1323/1323 [==============================] - 0s 122us/step - loss: 6.6132e-04 - acc: 1.0000\n"
+      "1800/1800 [==============================] - 0s 162us/step - loss: 6.1079e-04 - acc: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x233e679cd30>"
+       "<keras.callbacks.History at 0x262a9545be0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,15 +759,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[123   0]\n",
-      " [  0  24]] 1.0\n"
+      "[[168   0]\n",
+      " [  0  32]] 1.0\n"
      ]
     }
    ],
@@ -696,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
