the whole thing

--- a/06smuml/Lab6.ipynb
+++ b/06smuml/Lab6.ipynb
@@ -726,6 +726,12 @@
    },
    "outputs": [],
    "source": [
+    "#import some keras stuff\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Activation, Input\n",
+    "from keras.layers import Embedding, Flatten, Merge, concatenate\n",
+    "from keras.models import Model\n",
+    "\n",
     "# This returns a tensor\n",
     "inputs = Input(shape=(X_train.shape[1],))\n",
     "\n",
@@ -735,7 +741,17 @@
     "\n",
     "# This creates a model that includes\n",
     "# the Input layer and three Dense layers\n",
-    "model = Model(inputs=inputs, outputs=predictions)"
+    "model = Model(inputs=inputs, outputs=predictions)\n",
+    "\n",
+    "model.compile(optimizer='sgd',\n",
+    "              loss='mean_squared_error',\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(X_train, y_train, epochs=100, batch_size=50, verbose=0)\n",
+    "\n",
+    "from sklearn import metrics as mt\n",
+    "yhat = np.round(model.predict(X_test))\n",
+    "print(mt.confusion_matrix(y_test,yhat),mt.recall_score(y_test,yhat))"
    ]
   },
   {
