--- a/03smuml/Lab3.ipynb
+++ b/03smuml/Lab3.ipynb
@@ -2817,9 +2817,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlenv]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-mlenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2831,7 +2831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
