--- a/07smuml/lab7.ipynb
+++ b/07smuml/lab7.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -74,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def load_images(num_classes, h, w):\n",
@@ -2177,13 +2181,7 @@
       "607/607 [==============================] - 0s - loss: 0.1138 - acc: 0.5618     \n",
       "Epoch 88/100\n",
       "607/607 [==============================] - 0s - loss: 0.1171 - acc: 0.5470     \n",
-      "Epoch 89/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 89/100\n",
       "607/607 [==============================] - 0s - loss: 0.1116 - acc: 0.5865     \n",
       "Epoch 90/100\n",
       "607/607 [==============================] - 0s - loss: 0.1112 - acc: 0.5799     \n",
@@ -2418,13 +2416,7 @@
       "607/607 [==============================] - 1s - loss: 0.0198 - acc: 0.9423     \n",
       "Epoch 87/100\n",
       "607/607 [==============================] - 1s - loss: 0.0188 - acc: 0.9506     \n",
-      "Epoch 88/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 88/100\n",
       "607/607 [==============================] - 1s - loss: 0.0176 - acc: 0.9522     \n",
       "Epoch 89/100\n",
       "607/607 [==============================] - 1s - loss: 0.0194 - acc: 0.9456     - ETA: 0s - loss: 0.0203 - \n",
@@ -2556,9 +2548,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlenv]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-mlenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
