--- a/07smuml/lab7.ipynb
+++ b/07smuml/lab7.ipynb
@@ -31,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -76,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_images(num_classes, h, w):\n",
@@ -2181,7 +2177,13 @@
       "607/607 [==============================] - 0s - loss: 0.1138 - acc: 0.5618     \n",
       "Epoch 88/100\n",
       "607/607 [==============================] - 0s - loss: 0.1171 - acc: 0.5470     \n",
-      "Epoch 89/100\n",
+      "Epoch 89/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "607/607 [==============================] - 0s - loss: 0.1116 - acc: 0.5865     \n",
       "Epoch 90/100\n",
       "607/607 [==============================] - 0s - loss: 0.1112 - acc: 0.5799     \n",
@@ -2415,7 +2417,6 @@
       "Epoch 86/100\n",
       "607/607 [==============================] - 1s - loss: 0.0365 - acc: 0.8863     \n",
       "Epoch 87/100\n",
-<<<<<<< HEAD
       "607/607 [==============================] - 1s - loss: 0.0394 - acc: 0.8863     \n",
       "Epoch 88/100\n",
       "607/607 [==============================] - 0s - loss: 0.0394 - acc: 0.8830     \n",
@@ -2427,13 +2428,6 @@
      "output_type": "stream",
      "text": [
       "607/607 [==============================] - 0s - loss: 0.0364 - acc: 0.8896     \n",
-=======
-      "607/607 [==============================] - 1s - loss: 0.0188 - acc: 0.9506     \n",
-      "Epoch 88/100\n",
-      "607/607 [==============================] - 1s - loss: 0.0176 - acc: 0.9522     \n",
-      "Epoch 89/100\n",
-      "607/607 [==============================] - 1s - loss: 0.0194 - acc: 0.9456     - ETA: 0s - loss: 0.0203 - \n",
->>>>>>> c4682a95550c43ba4c0fb53af6fbb83b024f8d76
       "Epoch 90/100\n",
       "607/607 [==============================] - 0s - loss: 0.0336 - acc: 0.9012     \n",
       "Epoch 91/100\n",
@@ -2552,6 +2546,154 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see what LeNet can do on our dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 12435456 into shape (100,100)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-117-d5969e6de61d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mimg_wh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimg_wh\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mimg_wh\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 12435456 into shape (100,100)"
+     ]
+    }
+   ],
+   "source": [
+    "img_wh = 100\n",
+    "X = np.expand_dims(X.reshape((-1,img_wh,img_wh)), axis=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking input: expected conv2d_16_input to have 4 dimensions, but got array with shape (607, 1, 16384)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\mlenv\\lib\\site-packages\\keras\\models.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, **kwargs)\u001b[0m\n\u001b[0;32m    865\u001b[0m                               \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    866\u001b[0m                               \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 867\u001b[1;33m                               initial_epoch=initial_epoch)\n\u001b[0m\u001b[0;32m    868\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    869\u001b[0m     def evaluate(self, x, y, batch_size=32, verbose=1,\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\mlenv\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[0;32m   1520\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1521\u001b[0m             \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1522\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m   1523\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1524\u001b[0m         \u001b[0mdo_validation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\mlenv\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_batch_axis, batch_size)\u001b[0m\n\u001b[0;32m   1376\u001b[0m                                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_feed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1377\u001b[0m                                     \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1378\u001b[1;33m                                     exception_prefix='input')\n\u001b[0m\u001b[0;32m   1379\u001b[0m         y = _standardize_input_data(y, self._feed_output_names,\n\u001b[0;32m   1380\u001b[0m                                     \u001b[0moutput_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\mlenv\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    130\u001b[0m                                  \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    131\u001b[0m                                  \u001b[1;34m' dimensions, but got array with shape '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 132\u001b[1;33m                                  str(array.shape))\n\u001b[0m\u001b[0;32m    133\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mref_dim\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshapes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Error when checking input: expected conv2d_16_input to have 4 dimensions, but got array with shape (607, 1, 16384)"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "from keras.regularizers import l2 \n",
+    "\n",
+    "l2_lambda = 0.001\n",
+    "\n",
+    "# now lets use the LeNet architecture with batch norm\n",
+    "from keras.layers.normalization import BatchNormalization\n",
+    "\n",
+    "lenet = Sequential()\n",
+    "\n",
+    "lenet.add(Conv2D(filters=6,kernel_size=(5,5),\n",
+    "               input_shape = (w,h,1), \n",
+    "               padding='valid', \n",
+    "               kernel_initializer='he_uniform', \n",
+    "               kernel_regularizer=l2(l2_lambda)))\n",
+    "lenet.add(MaxPooling2D(pool_size=(2, 2), data_format=\"channels_last\"))\n",
+    "lenet.add(BatchNormalization())\n",
+    "lenet.add(Activation(\"sigmoid\"))\n",
+    "\n",
+    "lenet.add(Conv2D(filters=16,kernel_size=(5,5), \n",
+    "               padding='valid', \n",
+    "               kernel_initializer='he_uniform', \n",
+    "               kernel_regularizer=l2(l2_lambda)))\n",
+    "lenet.add(MaxPooling2D(pool_size=(2, 2), data_format=\"channels_last\"))\n",
+    "lenet.add(BatchNormalization())\n",
+    "lenet.add(Activation(\"sigmoid\"))\n",
+    "#lenet.add(Dropout(0.5))\n",
+    "\n",
+    "lenet.add(Conv2D(filters=120,kernel_size=(1,1), \n",
+    "               padding='valid', \n",
+    "               kernel_initializer='he_uniform', \n",
+    "               kernel_regularizer=l2(l2_lambda)))\n",
+    "\n",
+    "lenet.add(Flatten())\n",
+    "lenet.add(Dense(84))\n",
+    "lenet.add(Activation(\"sigmoid\"))\n",
+    "lenet.add(Dense(NUM_CLASSES))\n",
+    "lenet.add(Activation('softmax'))\n",
+    "\n",
+    "lenet.compile(loss='categorical_crossentropy', # 'categorical_crossentropy' 'mean_squared_error'\n",
+    "                optimizer='rmsprop', # 'adadelta' 'rmsprop'\n",
+    "                metrics=['accuracy'])\n",
+    "\n",
+    "# the flow method yields batches of images indefinitely, with the given transofmrations\n",
+    "#lenet.fit_generator(datagen.flow(X_train, y_train_ohe, batch_size=128), \n",
+    "#                      steps_per_epoch=int(len(X_train)/128), # how many generators to go through per epoch\n",
+    "#                      epochs=50, verbose=1,\n",
+    "#                      validation_data=(X_test,y_test_ohe),\n",
+    "#                      callbacks=[EarlyStopping(monitor='val_loss', patience=4)]\n",
+    "#                     )\n",
+    "\n",
+    "lenet.fit(np.expand_dims(X_train, axis=1), y_train_ohe, \n",
+    "        batch_size=32, epochs=100, \n",
+    "        shuffle=True, verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(607, 1, 16384)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.expand_dims(X_train, axis=1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(607, 16384)"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2563,9 +2705,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:mlenv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-mlenv-py"
   },
   "language_info": {
    "codemirror_mode": {
