--- a/07smuml/lab7_zihao.ipynb
+++ b/07smuml/lab7_zihao.ipynb
@@ -106,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -856,7 +858,7 @@
     "    accuracy = summarize_net(cnn_ens, X_test, y_test, title_text='CNN Ensemble:')\n",
     "    yhat = np.argmax(cnn_ens.predict(X_test), axis=1)\n",
     "    acc = mt.accuracy_score(y_test,yhat)\n",
-    "    return '{:.4f}'.format(acc)"
+    "    return acc"
    ]
   },
   {
@@ -1100,7 +1102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(X_train.shape)\n",
@@ -1238,7 +1242,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1252,7 +1256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
