--- a/07smuml/lab7_cv.ipynb
+++ b/07smuml/lab7_cv.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Yichen Duan\n",
+    "\n",
     "Zihao Mao\n",
     "\n",
     "Cameron Matson\n",
     "\n",
-    "9/22/2017\n",
     "\n",
-    "# Lab 7: CNN\n",
+    "11/20/2017\n",
+    "\n",
+    "# Lab 7: CNNs\n",
     "\n",
     "## Introduction\n",
     "\n",
