--- a/07smuml/lab7_cv.ipynb
+++ b/07smuml/lab7_cv.ipynb
@@ -676,13 +676,7 @@
       "529/529 [==============================] - 0s - loss: 0.0860 - acc: 0.6862     \n",
       "Epoch 82/100\n",
       "529/529 [==============================] - 0s - loss: 0.0750 - acc: 0.7278     \n",
-      "Epoch 83/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 83/100\n",
       "529/529 [==============================] - 0s - loss: 0.0773 - acc: 0.7297     \n",
       "Epoch 84/100\n",
       "529/529 [==============================] - 0s - loss: 0.0869 - acc: 0.6730     \n",
@@ -1042,13 +1036,7 @@
       "532/532 [==============================] - 0s - loss: 0.1125 - acc: 0.5564     \n",
       "Epoch 46/100\n",
       "532/532 [==============================] - 0s - loss: 0.1151 - acc: 0.5432     \n",
-      "Epoch 47/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 47/100\n",
       "532/532 [==============================] - 0s - loss: 0.1142 - acc: 0.5526     \n",
       "Epoch 48/100\n",
       "532/532 [==============================] - 0s - loss: 0.1097 - acc: 0.5658     \n",
@@ -1380,6 +1368,26 @@
     "    \n",
     "plt.legend(loc='best')\n",
     "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(796, 16384)"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
    ]
   },
   {
