added datagen stuff

--- a/07smuml/lab7_cv.ipynb
+++ b/07smuml/lab7_cv.ipynb
@@ -1398,6 +1398,166 @@
     "\n",
     "Now we'll us"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# we need to redefine our train and test splits\n",
+    "X = X.reshape(-1,img_hw,img_hw)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "y_train_ohe = keras.utils.to_categorical(y_train, NUM_CLASSES)\n",
+    "y_test_ohe = keras.utils.to_categorical(y_test, NUM_CLASSES)\n",
+    "\n",
+    "datagen = ImageDataGenerator(featurewise_center=False,\n",
+    "    samplewise_center=False,\n",
+    "    featurewise_std_normalization=False,\n",
+    "    samplewise_std_normalization=False,\n",
+    "    zca_whitening=False,\n",
+    "    rotation_range=5, # used, Int. Degree range for random rotations.\n",
+    "    width_shift_range=0.1, # used, Float (fraction of total width). Range for random horizontal shifts.\n",
+    "    height_shift_range=0.1, # used,  Float (fraction of total height). Range for random vertical shifts.\n",
+    "    shear_range=0., # Float. Shear Intensity (Shear angle in counter-clockwise direction as radians)\n",
+    "    zoom_range=0.,\n",
+    "    channel_shift_range=0.,\n",
+    "    fill_mode='nearest',\n",
+    "    cval=0.,\n",
+    "    horizontal_flip=False,\n",
+    "    vertical_flip=False,\n",
+    "    rescale=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# the datagenerator does the reshaping for us so we need to redefine the cnn model\n",
+    "cnn = Sequential()\n",
+    "\n",
+    "# no reshape here!\n",
+    "\n",
+    "cnn.add(Conv2D(filters=32,\n",
+    "               input_shape = (img_wh,img_wh,1),\n",
+    "               kernel_size=(3,3),\n",
+    "               kernel_initializer='he_uniform', \n",
+    "               kernel_regularizer=l2(l2_lambda),\n",
+    "               padding='same', \n",
+    "               activation='relu')) # more compact syntax\n",
+    "cnn.add(MaxPooling2D(pool_size=(2, 2), data_format=\"channels_last\"))\n",
+    "\n",
+    "cnn.add(Conv2D(filters=32,\n",
+    "               kernel_size=(3,3),\n",
+    "               kernel_initializer='he_uniform', \n",
+    "               kernel_regularizer=l2(l2_lambda),\n",
+    "               padding='same', \n",
+    "               activation='relu'))\n",
+    "cnn.add(MaxPooling2D(pool_size=(2, 2), data_format=\"channels_last\"))\n",
+    "    \n",
+    "\n",
+    "# add one layer on flattened output\n",
+    "cnn.add(Dropout(0.25)) # add some dropout for regularization after conv layers\n",
+    "cnn.add(Flatten())\n",
+    "cnn.add(Dense(128, \n",
+    "              activation='relu',\n",
+    "              kernel_initializer='he_uniform',\n",
+    "              kernel_regularizer=l2(l2_lambda)\n",
+    "       ))\n",
+    "cnn.add(Dropout(0.5)) # add some dropout for regularization, again!\n",
+    "cnn.add(Dense(NUM_CLASSES, \n",
+    "              activation='softmax', \n",
+    "              kernel_initializer='glorot_uniform',\n",
+    "              kernel_regularizer=l2(l2_lambda)\n",
+    "             ))\n",
+    "\n",
+    "# Let's train the model \n",
+    "cnn.compile(loss='categorical_crossentropy', # 'categorical_crossentropy' 'mean_squared_error'\n",
+    "              optimizer='rmsprop', # 'adadelta' 'rmsprop'\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      "4/4 [==============================] - 15s - loss: 10.6836 - acc: 0.2363 - val_loss: 2.4721 - val_acc: 0.1688\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x27a80156160>"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the flow method yields batches of images indefinitely, with the given transofmrations\n",
+    "cnn.fit_generator(datagen.flow(np.expand_dims(X_train, axis = 3), y_train_ohe, batch_size=128), \n",
+    "                  steps_per_epoch=int(len(X_train)/128), # how many generators to go through per epoch\n",
+    "                  epochs=1, verbose=1,\n",
+    "                  validation_data=(np.expand_dims(X_test, axis = 3),y_test_ohe),\n",
+    "                  callbacks=[EarlyStopping(monitor='val_loss', patience=2)]\n",
+    "                 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# finally we also need to redefine the viz function\n",
+    "def compare_mlp_cnn(cnn1, X_test, y_test, enc):\n",
+    "    plt.figure(figsize=(20,5))\n",
+    "    if cnn1 is not None:\n",
+    "        yhat_cnn1 = np.argmax(cnn1.predict( np.expand_dims(X_test.reshape(-1, img_hw,img_hw), axis=3)), axis=1)\n",
+    "        rec_cnn1 = mt.recall_score(y_test,yhat_cnn1, average='micro')\n",
+    "        plt.subplot(1,3,1)\n",
+    "        cm = mt.confusion_matrix(y_test,yhat_cnn1)\n",
+    "        cm = cm/np.sum(cm,axis=1)[:,np.newaxis]\n",
+    "        sns.heatmap(cm, annot=True, fmt='.2f', xticklabels=enc.inverse_transform([0, 1, 2, 3, 4]), \n",
+    "                   yticklabels=enc.inverse_transform([0, 1, 2, 3, 4]))\n",
+    "        plt.title('CNN1: '+str(rec_cnn1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
